# music-recommendation-multimodal

./: .dvcignore  .gitignore  README.md  data.dvc  logs.dvc  papers.dvc  pyproject.toml  test_dataset_script.py
.dvc/: config
Proyecto/: main.tex  organize_project.sh  referencias.bib
Proyecto/Chapters/: dataset.tex  modelo.tex  relacionados.tex
Reporte/: GitHub.md
Reporte/Chapters/: resultados.tex
Reporte/Contexto/: Definicion-proyecto.txt
checkpoints/: .gitignore  complete.dvc  prueba_10porciento.dvc
docs/: cleanup_report.md  git_merge_report.md  remote_branches_review.md  repository_review.md
notebooks/: 01b_generate_item_mapper.ipynb  02_verify_dataset.ipynb  04_split_dataset.ipynb  05_verify_user_liking.ipynb  0_spotipy.ipynb  1_EDAlastfm_NuevoDataset.ipynb  3_map_lyrics.ipynb
notebooks/experimental/: lyrics_download_draft.ipynb
report/: main.abs  main.tex  resumen.tex
report/Chapters/: conclusiones.tex  discusion.tex  planeacion.tex  resultados.tex  triz.tex
report/chapters/: cards_export.tex  conclusions.tex  dataset.tex  discussion.tex  introduction.tex  model.tex  qualitative_analysis.tex  results.tex
src/: dataset.py  evaluate.sh  evaluate_metrics.py  inference.py  train.py  train.sh
src/data/: audio_downloader.py
src/models/: __init__.py  item_tower.py  two_tower.py  user_tower.py
src/scraping/: cover_scraper.py
src/scripts/: check_embeddings.py  download_models.py  generate_encoders.py  generate_text_embeddings.py  inspect_encoders.py  test_dataset_loading.py
src/utils/: check_missing.py  monitor.py  stats.py
(+16 files in other folders)
